packages/next-swc/crates/core/tests/errors/next-font-loaders/without-font-modules/assigned-to-const/output.js
import inter from '@next/google-fonts?{"font":"Inter","variant":"400"}';
